# MLOps

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yaml  full_pipeline.sh  pipeline.sh  pipeline_train.sh  preparation.sh  pyproject.toml  requirements.txt  setup.cfg
MLOps_LR02/: __init__.py  dataset.py  features.py  plots.py
MLOps_LR02/lr3/: extract.py  first_load.py  transform.py
MLOps_LR02/lr3/shell/: extract.sh  first_load.sh  load.sh  transform.sh
MLOps_LR02/lr3/src/: first_load.py  load.py  transform.py
MLOps_LR02/modeling/: predict.py  train.py
config/: hyperparams.yaml
data/interim/: transformed.csv
data/processed/: preprocessed_data.csv
docs/: mkdocs.yml
docs/docs/: index.md
dz/: __init__.py  dataset.py  feature-2.py  feature-3.py  features.py  main.py  plots.py
dz/modeling/: predict.py  train.py
mlruns/0/: meta.yaml
mlruns/0/30f83e5dcf064906bac6d8c4bd76a8a9/: meta.yaml
mlruns/0/31d71487da784316be3273f7d4d4bc73/: meta.yaml
mlruns/0/406bc2b414e14e0ab2631d1b70d2baba/: meta.yaml
mlruns/0/55ccc9a68f924ac09545041370919e71/: meta.yaml
mlruns/0/7ceb9de3d54f4c48b576eecd16cd0956/: meta.yaml
mlruns/0/83ae710c3fa64b818f828906c44647cf/: meta.yaml
mlruns/0/92421f6675df453eae69238c9fecbfde/: meta.yaml
mlruns/0/a7da118dd3604b6f9e2d2552acf1d0bd/: meta.yaml
mlruns/0/dc071141444e4166913541620c8e128e/: meta.yaml
mlruns/0/f4e6bb3482594f029c88f2d38e500c89/: meta.yaml
mlruns/401044561660027362/: meta.yaml
mlruns/401044561660027362/027a7260f59a46de8591139fd4bb4258/: meta.yaml
mlruns/401044561660027362/0f02a3a5b30b4331bff7655528b5673a/: meta.yaml
mlruns/401044561660027362/5a4c9708a4c048a69d3bd5511afcf4bb/: meta.yaml
models/: DecisionTree_5_5_1.joblib  DecisionTree_5_7_1.joblib  DecisionTree_5_9_1.joblib
src/: example_script.py
src/modeling/: train.py  transform.py
src/shell/: extract.sh  first_load.sh  load.sh  transform.sh
(+53 files in other folders)
