[tool.poetry]
name = "mlops-lr02"
version = "0.1.0"
description = ""
authors = ["Dmitry Slobodchikov <dmitryslo@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
black = "24.8.0"
flake8 = "5.0.4"
mypy = "1.11.2"
pre-commit = "3.5.0"
pandas = "1.5.3"
numpy= "1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
